--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                 <a class ='btn2' href='#technology-section'>Technologies</a>
                 <a class ='btn2' href='#about-me-section'>CV</a>
             </div>
-        </div>
-
-            
+        </div>            
 
     <!--technologies--> 
     <section id ='project-section'>
@@ -34,7 +32,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="musically_site/index.html" class="btn">Project</a>
-                        <a href="musically.html" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -50,7 +48,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="js_challenges/index.html" class="btn">Project</a>
-                        <a href="#" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
@@ -65,7 +63,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="hotels_site/index.html" class="btn">Project</a>
-                        <a href="#" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
@@ -79,8 +77,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="index.html" class="btn">Project</a>
-                        <a href="musically.html" class="btn">Code</a>
+                        <a href="indonesian_site/index.html" class="btn">Project</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -96,7 +94,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="Paintball/index.html" class="btn">Project</a>
-                        <a href="musically.html" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
@@ -147,7 +145,6 @@
                     <h3>Bootstrap</h3>
                     <p>Sliders and other Bootstrap components. QUick creation of websites</p>
                 </div> 
- 
             </div>           
         </section>
         <div class ='about-me-section'id ='about-me-section'>
