--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="indonesia_site/index.html" class="btn">Project</a>
+                        <a href="indonesia-site/index.html" class="btn">Project</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
                     </div>
                 </div>
