--- a/paintball_site/index.html
+++ b/paintball_site/index.html
@@ -6,7 +6,7 @@
     <title>Zombie Paintball</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="paintball.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 </head>
 <body>
     <header>
