--- a/paintball_site/index.html
+++ b/paintball_site/index.html
@@ -185,10 +185,8 @@
         </div>    
         <p> Zombie Paintball 2020<p>
     </footer>  
-    <script src="https://kit.fontawesome.com/0f3bc4dbc5.js" crossorigin="anonymous"></script>
-    <script src="http://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="paintball.js" type="text/JavaScript"></script> 
 </body>
 </html>
