--- a/index.html
+++ b/index.html
@@ -143,13 +143,13 @@
                 <div class ='technology-card'>
                     <i class="fab fa-bootstrap fa-6x"></i>
                     <h3>Bootstrap</h3>
-                    <p>Sliders and other Bootstrap components. QUick creation of websites</p>
+                    <p>Sliders and other Bootstrap components. Quick creation of websites</p>
                 </div> 
             </div>           
         </section>
         <div class ='about-me-section'id ='about-me-section'>
             <h2>About Me</h2>
-            <p> In an entry-level role, the average UK front end developer salary starts at £28,000 and could increase to £55,000 with the right skills and experience. Experienced developer leads have an earning average of £75,250 and development managers could earn a salary of up to £100,000.</p>
+            <p> Download CV below</p>
             <a class ='btn' href="#">Download CV</a>
         </div>
         <footer><footer>   
