--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class ='technology-card'>
                     <i class="fab fa-react fa-6x"></i>
                     <h3>React</h3>
-                    <p>Creation of reusable components,  changing state, props, react forms, react classes</p>
+                    <p>Creation of reusable components,  changing state, props, react forms</p>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-js fa-6x"></i>
@@ -118,7 +118,7 @@
                 <div class ='technology-card'>
                     <img src = 'jquery.png'>
                     <h3>jQuery</h3>
-                    <p>DOM manipulation for an interactive website, adding classes, showing elements...</p>
+                    <p>DOM manipulation for interactive websites, adding classes, hiding and showing elements</p>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-sass fa-6x"></i>
@@ -128,7 +128,7 @@
                 <div class ='technology-card'>
                     <i class="fab fa-css3-alt fa-6x"></i>
                     <h3>CSS3</h3>
-                    <p>Responsiveness, flex, grid, box model, images, icons, </p>   
+                    <p>Responsiveness, flex, grid, box model, images, icons </p>   
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-html5 fa-6x"></i>
@@ -138,18 +138,17 @@
                 <div class ='technology-card'>
                     <i class="fab fa-adobe fa-6x"></i>
                     <h3>Adobe Photoshop</h3>
-                    <p>Changing or manipulating backgrounds, adjusting lights and colors, merging layers</p>
+                    <p>Changing backgrounds, adjustments of lightning and colours, merging layers</p>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-bootstrap fa-6x"></i>
                     <h3>Bootstrap</h3>
-                    <p>Sliders and other Bootstrap components. Quick creation of websites</p>
+                    <p>Sliders and other Bootstrap components for quick and responsive creation of websites</p>
                 </div> 
             </div>           
         </section>
         <div class ='about-me-section'id ='about-me-section'>
             <h2>About Me</h2>
-            <p> Download CV below</p>
             <a class ='btn' href="#">Download CV</a>
         </div>
         <footer><footer>   
