--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class = 'buttons'>
                 <a class = 'btn' href='#project-section'>Projects</a>
                 <a class ='btn2' href='#technology-section'>Technologies</a>
-                <a class ='btn2' href='#about-me-section'>CV</a>
+                <a class ='btn2' href='Adam-Lnenicka-CV.pdf'>CV</a>
             </div>
         </div>            
 
@@ -149,7 +149,7 @@
         </section>
         <div class ='about-me-section'id ='about-me-section'>
             <h2>About Me</h2>
-            <a class ='btn' href="#">Download CV</a>
+            <a class ='btn' href="Adam-Lnenicka-CV.pdf">Download CV</a>
         </div>
         <footer><footer>   
     </body>
