--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+lo<html>
     <head>
         <link rel="stylesheet" href="portfolio.css">
         <meta charset="UTF-8">
@@ -9,7 +9,7 @@
     <body>
         <div class="banner">
             <h1>< Adam Lnenicka ></h1>
-            <h2>Front-End Dev</h2>
+            <h2>Project Portfolio</h2>
             <div class = 'buttons'>
                 <a class = 'btn' href='#project-section'>Projects</a>
                 <a class ='btn2' href='#technology-section'>Technologies</a>
