--- a/musically_site/index.html
+++ b/musically_site/index.html
@@ -33,7 +33,7 @@
     <div class ='banner'>
         <div>
             <h2>Listen, create, enjoy.</h2>
-            <a class ='btn' href="contact us">Try for free</a>
+            <a class ='btn' href="#contact us">Try for free</a>
         </div>
     </div>
 
