--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         <li>HTML</li>                          
                     </ul>
                     <div class="card-footer">
-                        <a href="musically_site/index.html" class="btn">Project</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Code</a>
+                        <a href="musically_site/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -47,8 +47,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="js_challenges/index.html" class="btn">Project</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Code</a>
+                        <a href="js_challenges/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
@@ -62,8 +62,8 @@
                         <li>CSS</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="hotels_site/index.html" class="btn">Project</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Code</a>
+                        <a href="hotels_site/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
@@ -77,8 +77,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="indonesia-site/index.html" class="btn">Project</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
+                        <a href="indonesia-site/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -93,8 +93,8 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="paintball_site/index.html" class="btn">Project</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
+                        <a href="paintball_site/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
