--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="musically_site/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -48,7 +48,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="js_challenges/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
@@ -63,7 +63,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="hotels_site/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
@@ -78,7 +78,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="indonesia-site/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -94,7 +94,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="paintball_site/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
