--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
             </div>
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">Paintball Project</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>JQuery</li>
+                        <li>CSS/ SASS</li>
+                        <li>HTML</li>                             
+                    </ul>
+                    <div class="card-footer">
+                        <a href="paintball_site/index.html" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
+                    </div>
+                </div>
+                <img class="card-img" src="Capture-Piantball.jpg" alt="">
+            </div>
         </div>
     </section>    
   <!--technologies-->      
