--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="paintball_site/index.html" class="btn">Website</a>
+                        <a href="React_Speed_Typing/index.html" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
                     </div>
                 </div>
