--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>            
 
-    <!--technologies--> 
+    <!--projects--> 
     <section id ='project-section'>
         <h2>Projects</h2>
         <div class="cards">
@@ -31,7 +31,7 @@
                         <li>HTML</li>                          
                     </ul>
                     <div class="card-footer">
-                        <a href="musically_site/index.html" class="btn">Website</a>
+                        <a href="https://adam-lnenicka.github.io/musically-site/" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Code</a>
                     </div>
                 </div>
@@ -55,14 +55,29 @@
             </div>
             <div class="card">
                 <div class="card-content">
+                    <h3 class="card-title">React Speed Typing App</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>React</li>
+                        <li>HTML/CSS</li>                             
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
+                    </div>
+                </div>
+                <img class="card-img" src="Capture-Piantball.jpg" alt="">
+            </div>
+            <div class="card">
+                <div class="card-content">
                     <h3 class="card-title">Luxhotels Project</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
                         <li>Bootstrap</li>
-                        <li>CSS</li>                            
+                        <li>HTML/CSS</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="hotels_site/index.html" class="btn">Website</a>
+                        <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Code</a>
                     </div>
                 </div>
@@ -77,7 +92,7 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="indonesia-site/index.html" class="btn">Website</a>
+                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
                     </div>
                 </div>
@@ -93,23 +108,7 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="paintball_site/index.html" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
-                    </div>
-                </div>
-                <img class="card-img" src="Capture-Piantball.jpg" alt="">
-            </div>
-            <div class="card">
-                <div class="card-content">
-                    <h3 class="card-title">Paintball Project</h3>
-                    <h4 class="card-title">Technology</h4>
-                    <ul>
-                        <li>JQuery</li>
-                        <li>CSS/ SASS</li>
-                        <li>HTML</li>                             
-                    </ul>
-                    <div class="card-footer">
-                        <a href="react_type_speed/index.html" class="btn">Website</a>
+                        <a href="https://adam-lnenicka.github.io/paintball-site/" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
                     </div>
                 </div>
