--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                         <li>HTML</li>                          
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/musically-site/" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/musically-site/" target="null" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -47,7 +47,7 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="js_challenges/index.html" class="btn">Website</a>
+                        <a href="js_challenges/index.html"  target="null" class="btn">Website</a>
                         <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Code</a>
                     </div>
                 </div>
