--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="https://adam-lnenicka.github.io/musically-site/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/musically_site" target="null" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/musically-site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -47,8 +47,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="js_challenges/index.html"  target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/js_challenges" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/javaScript-challenges/"  target="null" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
@@ -62,11 +62,11 @@
                         <li>HTML/CSS</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" target="null" class="btn">Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/react-typing-speed" target="null" class="btn">Code</a>
                     </div>
                 </div>
-                <img class="card-img" src="Capture-Piantball.jpg" alt="">
+                <img class="card-img" src="capture-type.jpg" alt="">
             </div>
             <div class="card">
                 <div class="card-content">
@@ -77,8 +77,8 @@
                         <li>HTML/CSS</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/hotels_site" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Website</a>
+                        <a href="https://https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
@@ -92,8 +92,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/indonesia-site" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" target="null" class="btn">Website</a>
+                        <a href="https://https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -108,8 +108,8 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/paintball-site/" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/adam-lnenicka.github.io/tree/master/paintball_site" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/paintball-site/" target="null" class="btn">Website</a>
+                        <a href="https://https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
