--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                 </div> 
             </div>           
         </section>
-        <div class ='about-me-section'id ='about-me-section'>
-            <h2>About Me</h2>
-            <a class ='btn' href="Adam-Lnenicka-CV.pdf">Download CV</a>
-        </div>
+//       <div class ='about-me-section'id ='about-me-section'>
+//          <h2>About Me</h2>
+//           <a class ='btn' href="Adam-Lnenicka-CV.pdf">Download CV</a>
+//      </div>
         <footer><footer>   
     </body>
 </html>
