--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Website</a>
-                        <a href="https://https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
@@ -93,7 +93,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="https://adam-lnenicka.github.io/indonesian-css-site/" target="null" class="btn">Website</a>
-                        <a href="https://https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -109,7 +109,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="https://adam-lnenicka.github.io/paintball-site/" target="null" class="btn">Website</a>
-                        <a href="https://https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
