--- a/index.html
+++ b/index.html
@@ -162,10 +162,11 @@
                 </div> 
             </div>           
         </section>
-//       <div class ='about-me-section'id ='about-me-section'>
-//          <h2>About Me</h2>
-//           <a class ='btn' href="Adam-Lnenicka-CV.pdf">Download CV</a>
-//      </div>
+       <div class ='about-me-section'id ='about-me-section'>
+          <h2>About Me</h2>
+          <p>Developer passionate about JavaScript, JS frameworks, and UI design. Currently developing Python knowledge.</p>
+           <a class ='btn' href="Adam-Lnenicka-CV.pdf">Download CV</a>
+       </div>
         <footer><footer>   
     </body>
 </html>
