--- a/index.html
+++ b/index.html
@@ -159,6 +159,11 @@
                     <h3>Bootstrap</h3>
                     <p>Sliders and other Bootstrap components for quick and responsive creation of websites</p>
                 </div> 
+                <div class ='technology-card'>
+                    <img src = 'python-icon.png'></i>
+                    <h3>Python</h3>
+                    <p>Loops, variables, conditionals, working with sets and dictionaries</p>
+                </div> 
             </div>           
         </section>
         <footer><footer>   
