--- a/index.html
+++ b/index.html
@@ -122,47 +122,23 @@
                 <div class ='technology-card'>
                     <i class="fab fa-react fa-6x"></i>
                     <h3>React</h3>
-                    <p>Creation of reusable components,  changing state, props, react forms</p>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-js fa-6x"></i>
                     <h3>JavaScript</h3>
-                    <p>Use of ES6, DOM manipulation, loops, conditionals, variables, functions </p>
-                </div>
-                <div class ='technology-card'>
-                    <img src = 'jquery.png'>
-                    <h3>jQuery</h3>
-                    <p>DOM manipulation for interactive websites, adding classes, hiding and showing elements</p>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-sass fa-6x"></i>
-                    <h3>SASS</h3>
-                    <p>Nesting, variables, mixins, inheritance </p>
-                </div>
-                <div class ='technology-card'>
-                    <i class="fab fa-css3-alt fa-6x"></i>
-                    <h3>CSS3</h3>
-                    <p>Responsiveness, flex, grid, box model, images, icons </p>   
+                    <h3>CSS/SASS</h3>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-html5 fa-6x"></i>
                     <h3>HTML5</h3>
-                    <p>Page structure, working with classes and ID's, adding links</p>
                 </div> 
-                <div class ='technology-card'>
-                    <i class="fab fa-adobe fa-6x"></i>
-                    <h3>Adobe Photoshop</h3>
-                    <p>Changing backgrounds, adjustments of lightning and colours, merging layers</p>
-                </div>
                 <div class ='technology-card'>
                     <i class="fab fa-bootstrap fa-6x"></i>
                     <h3>Bootstrap</h3>
                     <p>Sliders and other Bootstrap components for quick and responsive creation of websites</p>
-                </div> 
-                <div class ='technology-card'>
-                    <img src = 'python-icon.png'></i>
-                    <h3>Python</h3>
-                    <p>Loops, variables, conditionals, working with sets and dictionaries</p>
                 </div> 
             </div>           
         </section>
