--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h2>Project Portfolio</h2>
             <div class = 'buttons'>
                 <a class = 'btn' href='#project-section'>Projects</a>
+                <a class ='btn2' href='https://github.com/Adam-Lnenicka'>Github</a>
                 <a class ='btn2' href='#technology-section'>Technologies</a>
             </div>
         </div>            
@@ -21,20 +22,20 @@
         <h2>Projects</h2>
         <div class="cards">
              <div class="card">
-                <div class="card-content">
-                    <h3 class="card-title">Luxhotels Project</h3>
-                    <h4 class="card-title">Technology</h4>
-                    <ul>
-                        <li>Bootstrap</li>
-                        <li>HTML/CSS</li>                            
-                    </ul>
-                    <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Code</a>
+                <div class="card">
+                    <div class="card-content">
+                        <h3 class="card-title">HappyDog Database</h3>
+                        <h4 class="card-title">Technology</h4>
+                        <ul>
+                            <li>Laravel/PHP -Working with Eloquent models, controllers, migrations, and seeders </li>
+                            <li>MySQL Pulling and updating SQL databases</li>                           
+                        </ul>
+                        <div class="card-footer">
+                            <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn"> Source Code</a>
+                        </div>
                     </div>
+                    <img class="card-img" src="happydog.jpg" alt="">
                 </div>
-                <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
-            </div>
             <div class="card">
                 <div class="card-content">
                     <h3 class="card-title">JavaScript Games</h3>
@@ -45,8 +46,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/javaScript-challenges/"  target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/javaScript-challenges/"  target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
@@ -60,11 +61,25 @@
                         <li>HTML/CSS</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/react-typing-speed" target="null" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/react-typing-speed" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="capture-type.jpg" alt="">
+            </div>
+            <div class="card-content">
+                <h3 class="card-title">Luxhotels Project</h3>
+                <h4 class="card-title">Technology</h4>
+                <ul>
+                    <li>Bootstrap</li>
+                    <li>HTML/CSS</li>                            
+                </ul>
+                <div class="card-footer">
+                    <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Live Website</a>
+                    <a href="https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Source Code</a>
+                </div>
+            </div>
+            <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
             </div>
             <div class="card">
                 <div class="card-content">
@@ -76,8 +91,8 @@
                         <li>HTML</li>                          
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/musically-site/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/musically-site" target="null" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/musically-site/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/musically-site" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Musically.jpg" alt="">
@@ -91,8 +106,8 @@
                         <li>HTML</li>                            
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/indonesian-css-site/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/indonesian-css-site" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Indonesia.jpg" alt="">
@@ -107,8 +122,8 @@
                         <li>HTML</li>                             
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/paintball-site/" target="null" class="btn">Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Code</a>
+                        <a href="https://adam-lnenicka.github.io/paintball-site/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/paintball-site" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
                 <img class="card-img" src="Capture-Piantball.jpg" alt="">
@@ -124,8 +139,20 @@
                     <h3>React</h3>
                 </div>
                 <div class ='technology-card'>
+                    <img class="card-img" src="laravel.jpg" alt="laravel icon">
+                    <h3>Laravel</h3>
+                </div>
+                <div class ='technology-card'>
                     <i class="fab fa-js fa-6x"></i>
                     <h3>JavaScript</h3>
+                </div>
+                <div class ='technology-card'>
+                    <img class="card-img" src="php.jpg" alt="php icon">
+                    <h3>php</h3>
+                </div>
+                <div class ='technology-card'>
+                    <img class="card-img" src="mysql.jpg" alt="php icon">
+                    <h3>mysql</h3>
                 </div>
                 <div class ='technology-card'>
                     <i class="fab fa-sass fa-6x"></i>
@@ -136,9 +163,12 @@
                     <h3>HTML5</h3>
                 </div> 
                 <div class ='technology-card'>
+                    <img class="card-img" src="git.png" alt="git icon">
+                    <h3>git</h3>
+                </div>
+                <div class ='technology-card'>
                     <i class="fab fa-bootstrap fa-6x"></i>
                     <h3>Bootstrap</h3>
-                    <p>Sliders and other Bootstrap components for quick and responsive creation of websites</p>
                 </div> 
             </div>           
         </section>
