--- a/index.html
+++ b/index.html
@@ -21,21 +21,22 @@
     <section id ='project-section'>
         <h2>Projects</h2>
         <div class="cards">
-             <div class="card">
-                <div class="card">
-                    <div class="card-content">
-                        <h3 class="card-title">HappyDog Database</h3>
-                        <h4 class="card-title">Technology</h4>
-                        <ul>
-                            <li>Laravel/PHP -Working with Eloquent models, controllers, migrations, and seeders </li>
-                            <li>MySQL Pulling and updating SQL databases</li>                           
-                        </ul>
-                        <div class="card-footer">
-                            <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn"> Source Code</a>
-                        </div>
+             
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">HappyDog Database</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>Laravel/PHP -Working with Eloquent models, controllers, migrations, and seeders </li>
+                        <li>MySQL Pulling and updating SQL databases</li>                           
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn"> Source Code</a>
                     </div>
-                    <img class="card-img" src="happydog.jpg" alt="">
                 </div>
+                <img class="card-img" src="happydog.jpg" alt="">
+            </div>
+
             <div class="card">
                 <div class="card-content">
                     <h3 class="card-title">JavaScript Games</h3>
@@ -67,20 +68,26 @@
                 </div>
                 <img class="card-img" src="capture-type.jpg" alt="">
             </div>
-            <div class="card-content">
-                <h3 class="card-title">Luxhotels Project</h3>
-                <h4 class="card-title">Technology</h4>
-                <ul>
-                    <li>Bootstrap</li>
-                    <li>HTML/CSS</li>                            
-                </ul>
-                <div class="card-footer">
-                    <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Live Website</a>
-                    <a href="https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Source Code</a>
+
+
+
+
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">Luxhotels Project</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>Bootstrap</li>
+                        <li>HTML/CSS</li>                             
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://adam-lnenicka.github.io/bootstrap-luxhotels/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/bootstrap-luxhotels" target="null" class="btn">Source Code</a>
+                    </div>
                 </div>
+                <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
             </div>
-            <img class="card-img" src="Capture-LuxHotels.jpg" alt="">
-            </div>
+
             <div class="card">
                 <div class="card-content">
                     <h3 class="card-title">Musically Project</h3>
@@ -151,7 +158,7 @@
                     <h3>php</h3>
                 </div>
                 <div class ='technology-card'>
-                    <img class="card-img" src="mysql.jpg" alt="php icon">
+                    <img class="card-img" src="mysql.png" alt="php icon">
                     <h3>mysql</h3>
                 </div>
                 <div class ='technology-card'>
