--- a/index.html
+++ b/index.html
@@ -24,17 +24,50 @@
              
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">HappyDog Database</h3>
+                    <h3 class="card-title">The Good Exchange </h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
-                        <li>Laravel/PHP -Working with Eloquent models, controllers, migrations, and seeders </li>
-                        <li>MySQL Pulling and updating SQL databases</li>                           
+                        <li>Laravel/PHP/MySQL - Eloquent relationships, photo upload, authentication, API endpoint creation, pulling and updating data </li>
+                        <li>React - Searchbar, display of data, google maps integration</li>
+                        <li>CSS/ Tailwind </li>
+                        <i>Developed in a team of 2</i>
                     </ul>
                     <div class="card-footer">
-                        <a href="https://github.com/Adam-Lnenicka/javaScript-challenges" target="null" class="btn"> Source Code</a>
+                        <a href="https://github.com/Adam-Lnenicka/The-Good-Exchange" target="null" class="btn"> Source Code</a>
                     </div>
                 </div>
-                <img class="card-img" src="happydog.jpg" alt="">
+                <img class="card-img" src="the2.png" alt="">
+            </div>
+
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">WineMe Laravel/PHP/React Project</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>React Fetching data from Laravel API, searchbar, data filter</li>
+                        <li>Laravel/PHP/SQL - use of Eloquent relationships, adding reviews, working with migrations </li>                             
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://github.com/Adam-Lnenicka/WineMe" target="null" class="btn">Source Code</a>
+                    </div>
+                </div>
+                <img class="card-img" src="wineme.jpg" alt="">
+            </div>
+            
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">React Speed Typing App</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>React - React app utilising useState and useEffect hooks</li>
+                        <li>HTML/CSS</li>                             
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/react-typing-speed/tree/gh-pages/code" target="null" class="btn">Source Code</a>
+                    </div>
+                </div>
+                <img class="card-img" src="capture-type.jpg" alt="">
             </div>
 
             <div class="card">
@@ -42,7 +75,7 @@
                     <h3 class="card-title">JavaScript Games</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
-                        <li>JavaScript</li>
+                        <li>JavaScript - Simple Vanilla JS apps utilising DOM manipulation</li>
                         <li>CSS/ SASS</li>
                         <li>HTML</li>                            
                     </ul>
@@ -52,25 +85,40 @@
                     </div>
                 </div>
                 <img class="card-img" src="Capture-jschallenges.jpg" alt="">
-            </div>
+            </div> 
+
+
+
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">React Speed Typing App</h3>
+                    <h3 class="card-title">Flight API React Search</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
-                        <li>React</li>
-                        <li>HTML/CSS</li>                             
+                        <li>React - Simple React app pulling flight data from an API</li>                        
                     </ul>
                     <div class="card-footer">
-                        <a href="https://adam-lnenicka.github.io/react-typing-speed/" target="null" class="btn">Live Website</a>
-                        <a href="https://github.com/Adam-Lnenicka/react-typing-speed" target="null" class="btn">Source Code</a>
+                        <a href="https://adam-lnenicka.github.io/API-flight-search-react2/" target="null" class="btn">Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/API-flight-search/tree/main/flights" target="null" class="btn">Source Code</a>
+
                     </div>
                 </div>
-                <img class="card-img" src="capture-type.jpg" alt="">
+                <img class="card-img" src="flightsearch.jpg" alt="">
             </div>
 
-
-
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">HappyDog Database</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>Laravel/PHP - Working with Eloquent models, controllers, migrations, and seeders </li>
+                        <li>MySQL Pulling and updating SQL databases</li>                           
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://github.com/Adam-Lnenicka/HappyDog-laravel-database" target="null" class="btn"> Source Code</a>
+                    </div>
+                </div>
+                <img class="card-img" src="happydog.jpg" alt="">
+            </div>
 
             <div class="card">
                 <div class="card-content">
@@ -146,7 +194,7 @@
                     <h3>React</h3>
                 </div>
                 <div class ='technology-card'>
-                    <img class="card-img" src="laravel.jpg" alt="laravel icon">
+                    <img class="card-img" src="laravel_1.png" alt="laravel icon">
                     <h3>Laravel</h3>
                 </div>
                 <div class ='technology-card'>
@@ -154,11 +202,11 @@
                     <h3>JavaScript</h3>
                 </div>
                 <div class ='technology-card'>
-                    <img class="card-img" src="php.jpg" alt="php icon">
+                    <img class="card-img" src="php_1.png" alt="php icon">
                     <h3>php</h3>
                 </div>
                 <div class ='technology-card'>
-                    <img class="card-img" src="mysql.png" alt="php icon">
+                    <img class="card-img" src="sql_1.png" alt="php icon">
                     <h3>mysql</h3>
                 </div>
                 <div class ='technology-card'>
@@ -170,7 +218,7 @@
                     <h3>HTML5</h3>
                 </div> 
                 <div class ='technology-card'>
-                    <img class="card-img" src="git.png" alt="git icon">
+                    <img class="card-img" src="git_1.png" alt="git icon">
                     <h3>git</h3>
                 </div>
                 <div class ='technology-card'>
