--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                         <a href="https://github.com/Adam-Lnenicka/WineMe" target="null" class="btn">Source Code</a>
                     </div>
                 </div>
-                <img class="card-img" src="wineme.jpg" alt="">
+                <img class="card-img" src="wine.jpg" alt="">
             </div>
-            
+
             <div class="card">
                 <div class="card-content">
                     <h3 class="card-title">React Speed Typing App</h3>
