--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">Luxhotels Project</h3>
+                    <h3 class="card-title">Luxhotels Responsive Page</h3>
                     <h4 class="card-title">Technology</h4>
-                    <ul>
+                    <ul>    
                         <li>Bootstrap</li>
                         <li>HTML/CSS</li>                             
                     </ul>
@@ -138,7 +138,7 @@
 
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">Musically Project</h3>
+                    <h3 class="card-title">Musically Responsive Page</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
                         <li>JQuery</li>
@@ -154,7 +154,7 @@
             </div>
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">Indonesia Project</h3>
+                    <h3 class="card-title">Indonesia Responsive Page</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
                         <li>CSS/ SASS</li>
@@ -169,7 +169,7 @@
             </div>
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">Paintball Project</h3>
+                    <h3 class="card-title">Paintball Reasponsive Page</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
                         <li>JQuery</li>
