--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="card">
                 <div class="card-content">
-                    <h3 class="card-title">Paintball Reasponsive Page</h3>
+                    <h3 class="card-title">Paintball Responsive Page</h3>
                     <h4 class="card-title">Technology</h4>
                     <ul>
                         <li>JQuery</li>
