--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
     <section id ='project-section'>
         <h2>Projects</h2>
         <div class="cards">
+
+            <div class="card">
+                <div class="card-content">
+                    <h3 class="card-title">React Rodent Data</h3>
+                    <h4 class="card-title">Technology</h4>
+                    <ul>
+                        <li>React - React router, hooks, searchbar, displaying/ hiding elements, pulling data from JSON file, google maps integration</li>
+                        <li>SCSS </li>
+
+                    </ul>
+                    <div class="card-footer">
+                        <a href="https://goofy-jones-20d8fc.netlify.app/" target="null" class="btn"> Live Website</a>
+                        <a href="https://github.com/Adam-Lnenicka/react-rodent-web" target="null" class="btn">Source Code</a>                    </div>
+                </div>
+                <img class="card-img" src="rodent.jpg" alt="">
+            </div>
              
             <div class="card">
                 <div class="card-content">
@@ -34,6 +50,7 @@
                     </ul>
                     <div class="card-footer">
                         <a href="https://github.com/Adam-Lnenicka/The-Good-Exchange" target="null" class="btn"> Source Code</a>
+                        
                     </div>
                 </div>
                 <img class="card-img" src="the2.png" alt="">
